--- a/package.json
+++ b/package.json
@@ -1,109 +1,137 @@
 {
-  "name": "smart-contracts",
-  "version": "1.0.0",
-  "description": "Smart Contracts",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dovellous/smart-contracts.git"
-  },
-  "keywords": [
-    "smart contracts",
-    "bep20",
-    "solidity",
-    "truffle",
-    "hardhat"
-  ],
-  "author": "@dovellous",
-  "license": "MIT",
+  "name": "my-app",
+  "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/experimental": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/units": "^5.7.0",
+    "@hookform/resolvers": "^3.3.1",
+    "@pqina/flip": "^1.8.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/supabase-js": "^2.36.0",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/ethereum": "^2.7.1",
+    "@web3modal/react": "^2.7.1",
+    "antd": "^5.8.6",
+    "antd-img-crop": "^4.13.0",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.3.1",
+    "eth-revert-reason": "^1.0.3",
+    "ethers": "^6.7.1",
+    "feather-icons": "^4.29.1",
+    "firebase": "^10.3.1",
+    "framer-motion": "^10.16.4",
+    "hardhat": "^2.17.2",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "querystring-es3": "^0.2.1",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-countup": "^6.4.2",
+    "react-dom": "^18.2.0",
+    "react-error-overlay": "6.0.11",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.46.1",
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "react-validation": "^3.0.7",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "timers-browserify": "^2.0.12",
+    "tty-browserify": "^0.0.1",
+    "typescript": ">=5.2.2",
+    "universal-cookie": "^6.1.0",
+    "usehooks-ts": "^2.9.1",
+    "validator": "^13.11.0",
+    "viem": "^1.10.3",
+    "wagmi": "^1.4.1",
+    "walletlink": "^2.5.0",
+    "web-vitals": "^3.4.0",
+    "web3modal": "^1.9.12",
+    "yup": "^1.2.0"
+  },
   "scripts": {
-    "create": "npx create-react-app app",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "hcreate": "npx hardhat",
-    "hcompile": "npx hardhat compile",
-    "hdeploy": "npx hardhat run scripts/deploy.js",
-    "hverify": "npx hardhat verify 0xFEf1CAb1d78a9616023722f5280e6F8ba0dc15D3 \"Zimbabwe Test 1\" ZIM1 9 1000000 25000 0xDC72E097f058F7a46f27aD7b303CE9b773c9cBCe 0x87eDa0892b0456DBE2aaF811EBe9b96923EBc48A --contract \"contracts/BEP20SmartContract.sol:BEP20SmartContract\"",
-    "hrun": "yarn hclean && yarn hcompile && yarn hdeploy",
-    "hflatten": "npx hardhat flatten src/token/BEP20/BEP20SmartContract.sol > contracts/BEP20SmartContract.sol",
-    "hflattenx": "npx hardhat flatten src/token/BEP20/BEP20SmartContract.sol | awk '/SPDX-License-Identifier/&&c++>0 {next} 1' | awk '/pragma experimental ABIEncoderV2;/&&c++>0 {next} 1' > contracts/BEP20SmartContract_h.sol",
-    "tflatten": "truffle-flattener src/token/BEP20/BEP20SmartContract.sol | awk '/SPDX-License-Identifier/&&c++>0 {next} 1' | awk '/pragma experimental ABIEncoderV2;/&&c++>0 {next} 1' > contracts/BEP20SmartContract_t.sol",
-    "hmerge": "sol-merger src/token/BEP20/BEP20SmartContract.sol | awk '/SPDX-License-Identifier/&&c++>0 {next} 1' | awk '/pragma experimental ABIEncoderV2;/&&c++>0 {next} 1' contracts/",
-    "hconsole": "npx hardhat console",
-    "haccounts": "npx hardhat accounts",
-    "hclean": "npx hardhat clean",
-    "htest": "npx hardhat test",
-    "hnode": "npx hardhat node",
-    "fix": "export NODE_OPTIONS=--openssl-legacy-provider",
-    "fix2": "Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope LocalMachine"
+    "xstart": "react-app-rewired start",
+    "xbuild": "react-app-rewired build",
+    "xtest": "react-app-rewired test",
+    "xeject": "react-app-rewired eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-etherscan": "^2.1.8",
-    "@nomiclabs/hardhat-ganache": "^2.0.1",
-    "@nomiclabs/hardhat-truffle5": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@nomiclabs/hardhat-web3": "^2.0.0",
-    "axios": "^0.24.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-register": "6.26.0",
-    "chai": "^4.3.4",
-    "chai-as-promised": "7.1.1",
-    "chai-bignumber": "3.0.0",
-    "console.table": "^0.10.0",
-    "crypto-js": "^4.1.1",
-    "dotenv": "10.0.0",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.2",
-    "ganache-cli": "^6.12.2",
-    "hardhat": "^2.8.0",
-    "hardhat-gas-reporter": "^1.0.6",
-    "identicon.js": "^2.3.3",
-    "infura-web3-provider": "0.0.3",
-    "jquery": "^3.6.0",
-    "js-crypto-rsa": "^1.0.3",
-    "jsencrypt": "^3.2.1",
-    "lite-server": "^2.6.1",
-    "lodash": "^4.17.21",
-    "material-icons": "^1.10.4",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.34",
-    "numeral": "^2.0.6",
-    "prettier": "^2.5.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "react": "17.0.2",
-    "react-bootstrap": "2.0.3",
-    "react-dom": "17.0.2",
-    "react-scripts": "^5.0.0",
-    "skeleton-elements": "^4.0.0",
-    "sol2uml": "^1.1.29",
-    "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.17",
-    "storage-manager-js": "^4.0.7",
-    "surya": "^0.4.5",
-    "trim-newlines": "^4.0.2",
-    "truffle": "^5.4.24",
-    "truffle-flattener": "^1.5.0",
-    "truffle-hdwallet-provider-privkey": "^0.3.0",
-    "twemoji": "^13.1.0",
-    "web3": "1.6.1"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.4.1",
-    "@truffle/hdwallet-provider": "^2.0.0",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-promise": "^5.1.0"
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.3.6",
+    "@types/mocha": ">=10.0.1",
+    "@types/react-redux": "^7.1.26",
+    "@types/redux": "^3.6.31",
+    "@types/redux-thunk": "^2.1.32",
+    "@web3-react/coinbase-wallet": "^8.2.2",
+    "@web3-react/core": "^8.2.2",
+    "@web3-react/eip1193": "^8.2.2",
+    "@web3-react/empty": "^8.2.2",
+    "@web3-react/gnosis-safe": "^8.2.3",
+    "@web3-react/metamask": "^8.2.3",
+    "@web3-react/network": "^8.2.2",
+    "@web3-react/types": "^8.2.2",
+    "@web3-react/url": "^8.2.2",
+    "@web3-react/walletconnect": "^8.2.2",
+    "@web3-react/walletconnect-v2": "^8.5.0",
+    "autoprefixer": "^10.4.15",
+    "chai": "^4.3.8",
+    "hardhat-gas-reporter": "^1.0.9",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.29",
+    "solidity-coverage": "^0.8.4",
+    "tailwindcss": "^3.3.3",
+    "ts-node": ">=10.9.1",
+    "typechain": "^8.3.1"
   }
 }
